--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/client.tsx"></script>
+    <div id="elite-ssf"></div>
+    <script>
+      window.__SSF__ = <!--elite-ssf-->;
+    </script>
   </body>
 </html>
