--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="app"><!--app-html--></div>
-    <script type="module" src="/client/index.jsx"></script>
+    <script type="module" src="./src/index.jsx"></script>
     <!--hydration-->
   </body>
 </html>
