--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <title>Elite.js</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="app"><!--app-html--></div>
+    <script type="module" src="./src/index.jsx"></script>
+    <!--hydration-->
   </body>
 </html>
