--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Elite.js</title>
   </head>
   <body>
-    <div id="app"><!--app-html--></div>
+    <div id="app"/>
     <script type="module" src="./src/index.jsx"></script>
     <!--hydration-->
   </body>
